--- a/Web application/login.html
+++ b/Web application/login.html
@@ -13,7 +13,7 @@
             <img src="assets/images/logo.svg">
         </div>
         <div class="content" id="second">
-            <form action="" id="form1">
+            <form action="index.html" id="form1" method="post">
                 <div class="inputfields">
                     <label for="username">Enter Email address</label>
                     <input type="email" id="username" name="username" placeholder="Enter Email address" autocomplete="off">
